--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Genesis</title>
+    <title>Jogo da memória - Genius</title>
 </head>
 <body>
     <div class="main-game">
@@ -14,6 +14,7 @@
            <div class="yellow"></div>
            <div class="red"></div>
            <div class="green"></div>
+           <div class="iniciar"><img src="iniciar.png" alt=""></div>
         </div>
     </div>
     <script type="text/javascript" src="script.js"></script>
